SQL Server database stuff

--- a/MorrisPhotos.Web/appsettings.json
+++ b/MorrisPhotos.Web/appsettings.json
@@ -4,5 +4,8 @@
     "LogLevel": {
       "Default": "Warning"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=MORRIS-DESKTOP;Database=OhioTrackStats;User ID=ots;Password=OhioTrackStats1!;" 
+  } 
 }
